<resources>
    <string name="app_name">SignUpForm</string>

    <string name="action_settings">Settings</string>

    <string name="username_text">Username:</string>
    <string name="username_prompt">Please enter your username</string>

    <string name="password_text">Password:</string>
    <string name="password_prompt">Please enter your password</string>

    <string name="pw_confirm_text">Confirm:</string>
    <string name="pw_confirm_prompt">Please confirm your password</string>

    <string name="submit">Submit</string>
</resources>
